# sigil

./: .bazelignore  .bazeliskrc  .bazelrc  .deepsource.toml  .dockerignore  .drone.yml  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  BUILD  CHANGELOG.md  Dockerfile  Dockerfile-dev  Makefile  README.md  Taskfile.yml  WORKSPACE  go.mod  go.sum  main.go  renovate.json  session-manager-plugin.sha256
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: golangci-lint.yaml  linters.yaml  pull-request.yaml  release.yaml  test-linux.yaml  test-macos.yaml  test.yaml
Formula/: sigil.rb
cmd/: BUILD.bazel  gendoc.go  list.go  root.go  session.go  ssh.go  verify.go
cmd/sigil/: main.go
doc/: sigil.md  sigil_gendoc.md  sigil_list.md  sigil_session.md  sigil_ssh.md  sigil_verify.md
docs/: 00-get-started.md  10-configuration.md  README.md
docs/man/: sigil.md  sigil_list.md  sigil_session.md  sigil_ssh.md
docs/usage/: 00-list.md  10-session.md  20-ssh.md  30-verify.md  README.md
pkg/aws/: BUILD.bazel  aws.go  aws_test.go  interface.go  list.go  list_test.go  session.go  session_test.go  ssh.go  ssh_test.go
pkg/aws/helpers/: BUILD.bazel  helpers.go
pkg/aws/log/: BUILD.bazel  log.go
pkg/aws/mocks/: aws_mocks.go
pkg/list/: BUILD.bazel  list.go  list_test.go
pkg/os/: BUILD.bazel  ignore_signals.go  ignore_signals_windows.go
pkg/session/: BUILD.bazel  session.go  session_test.go
pkg/ssh/: BUILD.bazel  ssh.go  ssh_test.go
pkg/utils/: ignore_signals.go  ignore_signals_windows.go  utils.go  utils_test.go
scripts/: install-helper.sh  pre-commit.sh
tools/: BUILD  fix_codecov.sh  get_workspace_status.sh  repositories.bzl
