load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "list.go",
        "root.go",
        "session.go",
        "ssh.go",
        "verify.go",
    ],
    importpath = "github.com/danmx/sigil/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aws:go_default_library",
        "//pkg/list:go_default_library",
        "//pkg/session:go_default_library",
        "//pkg/ssh:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
