load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "aws.go",
        "interface.go",
        "list.go",
        "session.go",
        "ssh.go",
    ],
    importpath = "github.com/danmx/sigil/pkg/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aws/log:go_default_library",
        "//pkg/os:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/client:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials/stscreds:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2instanceconnect:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ssm:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
