load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@com_github_jmhodges_bazel_gomock//:gomock.bzl", "gomock")

go_library(
    name = "go_default_library",
    srcs = ["list.go"],
    importpath = "github.com/danmx/sigil/pkg/list",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aws:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aws_mock_test.go",
        "list_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/aws:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

gomock(
    name = "mock_aws",
    out = "aws_mock_test.go",
    library = "//pkg/aws:go_default_library",
    interfaces = [
        "Cloud",
        "CloudInstances",
        "CloudSessions",
        "CloudSSH",
    ],
    package = "list",
    self_package = "github.com/danmx/sigil/pkg/list",
)
