load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@com_github_jmhodges_bazel_gomock//:gomock.bzl", "gomock")

go_library(
    name = "go_default_library",
    srcs = ["ssh.go"],
    importpath = "github.com/danmx/sigil/pkg/ssh",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aws:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aws_mock_test.go",
        "ssh_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/aws:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

gomock(
    name = "mock_aws",
    out = "aws_mock_test.go",
    interfaces = [
        "Cloud",
        "CloudInstances",
        "CloudSessions",
        "CloudSSH",
    ],
    library = "//pkg/aws:go_default_library",
    package = "ssh",
    self_package = "github.com/danmx/sigil/pkg/ssh",
)
